[project]
name = "venvstacks"
version = "0.1.0rc1"
description = "Use layered Python virtual environment stacks to share large dependencies"
authors = [
    {name = "Alyssa Coghlan", email = "ncoghlan@gmail.com"},
]
maintainers = [
    {name = "LM Studio", email = "team@lmstudio.ai"},
]

dependencies = [
    # Environment package installation is run externally (from the build tools environment)
    "pip>=24.1.1",
    # PDM is used to install the base runtime environments for deployment
    "pdm>=2.17.3",
    # `uv pip compile` is used rather than `pip-compile` as it is faster and
    # doesn't have to be installed into the target Python runtime environment.
    # Due to https://github.com/astral-sh/uv/issues/2500 `uv` can't be used to
    # replace `pip install`
    # Due to https://github.com/astral-sh/uv/issues/2831 we're also not trying to
    # replace `python -Im venv` with `uv venv` at this point since we want explicit
    # control over whether files are symlinked or copied between the environments
    "uv>=0.2.33",
    # Typer is used for the CLI interface. Install 'rich-cli' extra for enhanced features.
    "typer-slim>=0.12.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["packaging", "dependency", "venv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]

[project.optional-dependencies]
rich-cli = [
  # Enable typer's enhanced functionality for local interactive use
  "typer>=0.12.4",
]

[project.scripts]
venvstacks = "venvstacks.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "tox>=4.16.0",
    "tox-gh>=1.3.2",
    "tox-pdm>=0.7.2",
    "pytest>=8.3.1",
    "ruff>=0.5.4",
    "mypy>=1.11.0",
    "pytest-subtests>=0.13.1",
    "coverage[toml]>=7.6.4",
    # Use exact pin for dev as runtime environments are sensitive to the exact pbs version
    "pbs-installer==2024.10.10",
    # Uses exact pin for dev as lock file regeneration is sensitive to the exact uv version
    "uv==0.4.21",
]
bootstrap = [
    "pdm>=2.16.1",
]
docs = [
    "sphinx>=8.1.3",
    "furo>=2024.8.6",
]

[tool.pytest.ini_options]
# Allow skipping slow tests for local testing
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "expected_output: tests to run when regenerating expected output",
]
# Make long diffs visible in pytest 8.3.3 and later
verbosity_assertions = 2
# Ensure test suite doesn't consume too much space in /tmp, while still allowing debugging
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 1

[tool.coverage.run]
debug = ["pathmap"]
relative_files = true
source_pkgs = [
    "venvstacks",
]
source = [
    "tests/",
]
omit = [
    # There is quite a bit of test support code that
    # only runs to help diagnose failures in CI
    "tests/support.py",
]

[tool.coverage.paths]
source = [
    "src/",
    "**/.tox/**/site-packages/",
]

[tool.ruff]
# Assume Python 3.11
target-version = "py311"
