[project]
name = "venvstacks"
version = "0.8.0b1"
description = "Use layered Python virtual environment stacks to share large dependencies"
authors = [
    {name = "Alyssa Coghlan", email = "ncoghlan@gmail.com"},
]
maintainers = [
    {name = "LM Studio", email = "team@lmstudio.ai"},
]

dependencies = [
    # Environment package installation is run externally (from the build tools environment)
    "pip>=24.1.1",
    # PDM is used to install the base runtime environments for deployment
    "pdm>=2.17.3",
    # Installations may pin a specific version of pbs-installer to control exact runtime versions
    # pbs-installer>=2025.8.27 ensures the use of smaller runtime archives without debug symbols
    # (that lower bound is not specified by default to avoid conflicting with older version pins)
    "pbs-installer",
    # Minimum uv version for Windows ARM64 support in --python-platform
    "uv>=0.8.12",
    # Installer is used for RECORD file editing
    "installer>=0.7.0",
    # packaging is used directly for low level metadata handling tasks
    "packaging>=24.0",
    # rich is used for the CLI console display
    "rich>=13.6.0",
    # Typer is used for the CLI arg parsing. Install 'rich-cli' extra for enhanced features.
    "typer-slim>=0.12.4",
    # tomlkit is used to save programmatically defined environment stacks,
    # as well as for writing tool configuration files when locking and building layers
    "tomlkit>=0.13.2",
    # dulwich is used for git metadata processing to avoid any external git CLI dependency
    "dulwich>=0.23.2",
    # Compatibility workaround for https://github.com/pdm-project/pdm/issues/3665
    "hishel<1.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["packaging", "dependency", "venv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]

[project.optional-dependencies]
rich-cli = [
  # Enable typer's enhanced functionality for local interactive use
  "typer>=0.12.4",
]

[project.scripts]
venvstacks = "venvstacks.cli:main"

[project.urls]
Homepage = "https://github.com/lmstudio-ai/venvstacks"
Documentation = "https://venvstacks.lmstudio.ai/"
Issues = "https://github.com/lmstudio-ai/venvstacks/issues"
Changelog = "https://venvstacks.lmstudio.ai/changelog/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    {include-group = "task-runner"},
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "typecheck"},
    # Utility for generating release note fragments
    "scriv[toml]>=1.5.1",
]
task-runner = [
    "tox>=4.16.0",
    "tox-gh>=1.3.2",
    # Note: may be able to drop tox-pdm after tox and pdm
    # both support the standardised lock file format
    "tox-pdm>=0.7.2",
]
dynlib-wheel-build = [
    # Installed in the dynlib wheel build env,
    # not directly in test or dev environments
    "meson-python>=0.17.1",
    "pkgconf>=2.4.3.post1",
    "ninja>=1.11.1.4; sys_platform == 'win32'",
]
test = [
    "pytest>=8.3.1",
    "pytest-subtests>=0.13.1",
    "coverage[toml]>=7.6.4",
    # click changed the way CliRunner works in 8.2.0 and tests now rely
    # on stdout and stderr being kept separate by default
    "click>=8.2.0",
    # Exact pin for tests as runtime environments are sensitive to the pbs version
    "pbs-installer==2025.8.27",
    # Exact pin for tests as lock file regeneration is sensitive to the uv version
    "uv==0.8.18",
]
lint = [
    "ruff>=0.5.4",
]
typecheck = [
    "mypy>=1.11.0",
]
bootstrap = [
    # Need support for the [dependency-groups] table
    "pdm>=2.20.0",
]
docs = [
    "sphinx>=8.1.3",
    "furo>=2024.8.6",
]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
migrate-to-pylock = "./misc/migrate-to-pylock.py"

[tool.mypy]
python_version = "3.11"
untyped_calls_exclude = "dulwich"

[tool.pytest.ini_options]
# Allow skipping slow tests for local testing
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "expected_output: tests to run when regenerating expected output",
]
# Warnings should only be emitted when being specifically tested
filterwarnings = [
    "error",
    "ignore:The venvstacks API is NOT YET STABLE:FutureWarning"
]
# Make long diffs visible in pytest 8.3.3 and later
verbosity_assertions = 2
# Ensure test suite doesn't consume too much space in /tmp, while still allowing debugging
tmp_path_retention_policy = "failed"
tmp_path_retention_count = 1

[tool.coverage.run]
relative_files = true
source_pkgs = [
    "venvstacks",
]
source = [
    "tests/",
]
omit = [
    # There is quite a bit of test support code that
    # only runs to help diagnose failures in CI
    "tests/support.py",
]

[tool.coverage.paths]
source = [
    "src/",
    "**/.tox/**/site-packages/",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# Enable all `pydocstyle` rules, limiting to those that adhere to the
# Google convention via `convention = "google"`, below.
extend-select = ["D"]

# Disable `D105` (it's OK to skip writing docstrings for every magic method)
# Disable `D417` (not yet requiring documentation for every function parameter)
ignore = ["D105", "D417"]

[tool.ruff.lint.pydocstyle]
# https://sphinxcontrib-napoleon.readthedocs.io/en/latest/example_google.html#example-google
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Skip checking docstrings in the test suite
"tests/**" = ["D"]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
fragment_directory = "docs/changelog.d"
skip_fragments = "README[._]*"
ghrel_template = "file: ghrel_template.md.j2"
